<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground">

    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/camera_capture_button"
        app:layout_constraintTop_toBottomOf="@id/include" />

    <com.treemeasurer.measurer.widget.FontIconView
        android:id="@+id/camera_capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="#fff"
        android:textSize="64dp"
        android:scaleType="fitCenter"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_view_oritation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_background_tip"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_view_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_background_tip"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_view_use_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_tip"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/height_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/shape_background_edit"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/camera_capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/camera_capture_button"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_view_edit_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="#fff"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/font_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <com.treemeasurer.measurer.widget.FontIconView
            android:id="@+id/font_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_edit_height"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_edit_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textSize="16sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.treemeasurer.measurer.widget.FontIconView
        android:id="@+id/font_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target"
        android:textColor="#ff0000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>